* 2013-05-02 - thorben.betten@open-xchange.com

 - Fix for bug 26305: Use safe hash calculation to avoid hash collisions

* 2013-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 26243: Fixed vulnerability of XSS injection by content-type header

* 2013-04-27 - thorben.betten@open-xchange.com

 - Fix for bug 26237: Fixed possible XSS vulnerability

* 2013-04-17 - thorben.betten@open-xchange.com

 - Fix for bug 25957: Deny "vbscript" URLs

* 2013-04-16 - thorben.betten@open-xchange.com

 - Fix for bug 25903: Added null guard when reading settings
 - Fix for bug 25909: Proper initialization of service trackers although registering contact-collect service is disabled

* 2013-04-15 - martin.herfurth@open-xchange.com

 - Fix for bug 25895: Cropped files at 500kb fixed.

* 2013-04-15 - marc.arens@open-xchange.com

 - Fix for bug 25863: Move ArrayList.clear() to beginning of runloop and add logging in case of error

* 2013-04-12 - marcus.klein@open-xchange.com

 - Fix for bug 25819: Changing the IMAP server, IMAP login and SMTP server is now possible for user objects.

* 2013-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 25808: Fixed sending documents as mail attachments
 - Fix for bug 25802: Trying to bypass parsing a message from stream
 - Fix for bug 25792: Deal with possibly non-mail-safe E-Mail addresses
 - Fix for bug 24519: Ignore "@Open-Xchange" suffix during Content-Id look-up
 - Fix for bug 25806: Proper cache invalidation

* 2013-04-08 - thorben.betten@open-xchange.com

 - Fix for bug 25753: Sane Content-Type value

* 2013-04-08 - marc.arens@open-xchange.com

 - Fix for bug: 25039 - Files: Uploading a new file version of 10MB times out without user notification
 - Fix for bug: 25474 - Unexpected error: null when sending mail
 - Fix for bug: 25285 - publication api always returns http as protocol

* 2013-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 25715: Check if specified quota is in allowed range for INT(10) UNSIGNED